# rust-curriculum

./: .gitignore  Cargo.toml  README.md  words_for_pj5.txt
assets/: words_for_pj5.txt
src/: main.rs
src/concepts/: actix_first.rs  dynamic_dispatch.rs  mod.rs
src/concurrency/: mod.rs  thread_safe_counter.rs
src/pjs/: code_architecture.excalidraw  mod.rs  pj1.rs  pj10.rs  pj10_todoapp.rs  pj11_basic_time_tool.rs  pj12_rock_paper_scissors.rs  pj13_json_parser.rs  pj14_file_reader_cli.rs  pj15_memory_management.rs  pj16_string_manipulation_tool.rs  pj17_contact_manager.rs  pj18_linkedlists_implementation.rs  pj19_simple_ai_chat_application.rs  pj2.rs  pj20_config_file_parser.rs  pj21_minigrep.rs  pj21_minigrep_betterversion.rs  pj22_better_minigrep.rs  pj22_logger_utility.rs  pj23_data_validation_pool.rs  pj24_generic_binary_search_cli.rs  pj25_trait_plugin_using_dynamic_dispatch.rs  pj26_polymorphic_shape_renderer.rs  pj27_multi_threaded_counter.rs  pj28_thread_pool.rs  pj29_simple_parallel_web_crawler.rs  pj3.rs  pj30_producer_consumer_demo.rs  pj32_dirscanner_and_file_producer.rs  pj33_file_compression.rs  pj34_system_monitor.rs  pj35_multi_threaded_file_copier.rs  pj36_csv_processor.rs  pj37_file_encryption_tool.rs  pj38_process_manager.rs  pj39_tcp_server.rs  pj4.rs  pj40_tcp_client.rs  pj41_multi_client_chat_server.rs  (+21 more)
src/pjs/bot/: history.rs  mod.rs  responses.rs
src/pjs/pj60_yew_chat_ui/: Cargo.toml  index.html
src/pjs/pj60_yew_chat_ui/src/: lib.rs  main.rs
