[package]
name = "ms-projects"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
regex = "1.12.3"
colored = "3.1.1"
reqwest = { version = "0.13.3" , features = ["blocking"] }
flate2 = "1.1.9"
sysinfo = "0.39.2"
rayon = "1.12.0"
csv = "1.4.0"

