[package]
name = "ms-projects"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.44"
regex = "1.12.3"
colored = "3.1.1"
reqwest = { version = "0.13.3", features = ["blocking", "json"] }
flate2 = "1.1.9"
sysinfo = "0.39.2"
rayon = "1.12.0"
csv = "1.4.0"
aes = "0.9.0"
cipher = "0.5.2"
ctr = "0.10.1"
hex = "0.4.3"
argon2 = "0.6.0-rc.8"
rand_core = "0.10.1"
log = "0.4.29"
env_logger = "0.11.10"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "macros"] }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"

