[package]
name = "pj60_yew_chat_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.23.0", features = ["csr"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "BinaryType",
    "Blob",
    "HtmlInputElement",
    "MessageEvent",
    "WebSocket",
    "Window",
    "InputEvent",
    "KeyboardEvent",
    "MouseEvent"
] }